app/assets/stylesheets/base.scss
$base-colors: (
  'background': #A50,
  'foreground': #ECD079,
  'text': #502800
);

$shadowOffset: 20px;

@function color($key) {
  @return map-get($base-colors, $key);
}

@function mix-up($color, $level: 0) {
  @return mix(#FFF, $color, $level);
}

@function mix-down($color, $level: 0) {
  @return mix(#000, $color, $level);
}

* {
  font-family: Helvetica, sans-serif;
}

body {
  background-color: color('background');
  margin: 0;
}

p, ul {
  margin: 0;
}

table {
  border-spacing: 0;
  margin: 16px 0;
  width: 100%;
}

tr.even {
  background-color: mix-up(color('text'), 40%);
}

.container {
  height: 100vh;
  width: 1000px;
}

.content {
  box-shadow: 0 0 $shadowOffset;
  height: 100%;
  padding: 20px 40px 0; 
}

.centered {
  margin-left: auto;
  margin-right: auto;
}

.foreground {
  background-color: color('foreground');
}

.header {
  box-shadow: 0 0 $shadowOffset;
  height: 100px;
  margin-bottom: $shadowOffset;
}

.text-centered {
  text-align: center;
}

